--- a/Webshop/webshop.html
+++ b/Webshop/webshop.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   
-  <title>Bürodesign GmbH ---- Filiale Essen</title>
+  <title>Royal Beauty </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../Bootstrap5/css/bootstrap.min.css">
