--- a/index.html
+++ b/index.html
@@ -151,21 +151,21 @@
   <div class="row text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="bmxz9o5jtvw2e4rppgda.webp" alt="Peter Fuchs" width="350" height="250">
+        <img src="Frisuar.jpg" alt="" width="350" height="250">
         <p><strong></strong></p>
         <p></p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="kinder-spa-615.jpg" alt="Leitung Kundenservice Hr. Merenge" width="350" height="250">
+        <img src="kinder-spa-615.jpg" alt="" width="350" height="250">
         <p><strong></strong></p>
         <p></p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="de.jpg" alt="Leitung Verkauf Frau van Boom " width="350" height="250">
+        <img src="de.jpg" alt=" " width="350" height="250">
         <p><strong></strong></p>
         <p></p>
       </div>
